force-app/main/default/objects/FieloCH__ChallengeReward__c/fields/FieloCH__DateValue__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__DateValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Value</label>
    <type>Date</type>
</CustomField>