force-app/main/default/objects/FieloCH__ChallengeReward__c/fields/FieloCH__Description__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>