force-app/main/default/objects/FieloCH__ChallengeReward__c/fields/FieloCH__FieldToUpdate__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__FieldToUpdate__c</fullName>
    <description>Field of member to update</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Field To Update</label>
    <length>80</length>
    <type>Text</type>
</CustomField>