force-app/main/default/objects/FieloCH__ChallengeReward__c/fields/FieloCH__ListValue__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__ListValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ListValue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>