force-app/main/default/objects/FieloCH__ChallengeReward__c/fields/FieloCH__PositionText__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__PositionText__c</fullName>
    <formula>IF( ISPICKVAL(FieloCH__Challenge__r.FieloCH__TableType__c, &apos;Standard&apos;) ,  TEXT(FieloCH__Position__c) , 

         IF( FieloCH__To__c == 0 , 
             &apos; + &apos;+ TEXT(FieloCH__From__c) ,
             TEXT(FieloCH__From__c) +&apos; - &apos;+ TEXT(FieloCH__To__c) 
         )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Positions</label>
    <type>Text</type>
</CustomField>