force-app/main/default/objects/FieloCH__ChallengeReward__c/fields/FieloCH__Title__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>